avantia-labs/03-compute/dev-gke/ingress/ingress-kong.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    konghq.com/https-redirect-status-code: "301"
    konghq.com/plugins: gelf-graylog-priv-plugin
    konghq.com/protocols: https
    konghq.com/strip-path: "true"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt","konghq.com/https-redirect-status-code":"301","konghq.com/protocols":"https","konghq.com/strip-path":"true"},"name":"ingress-kong","namespace":"kong"},"spec":{"ingressClassName":"kong","rules":[{"host":"echo.gcp.wesafer.com.br","http":{"paths":[{"backend":{"service":{"name":"echo","port":{"number":1027}}},"path":"/echo","pathType":"ImplementationSpecific"}]}}],"tl [...]
  creationTimestamp: "2024-11-26T08:22:06Z"
  generation: 1
  labels:
    k8slens-edit-resource-version: v1
  managedFields:
  - apiVersion: networking.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:cert-manager.io/cluster-issuer: {}
          f:konghq.com/https-redirect-status-code: {}
          f:konghq.com/protocols: {}
          f:konghq.com/strip-path: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
      f:spec:
        f:ingressClassName: {}
        f:rules: {}
        f:tls: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: "2024-11-26T08:22:06Z"
  - apiVersion: networking.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:loadBalancer:
          f:ingress: {}
    manager: kong-ingress-controller
    operation: Update
    subresource: status
    time: "2024-11-26T08:22:07Z"
  - apiVersion: networking.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:konghq.com/plugins: {}
        f:labels:
          .: {}
          f:k8slens-edit-resource-version: {}
    manager: node-fetch
    operation: Update
    time: "2024-12-03T09:16:22Z"
  name: ingress-kong
  namespace: kong
  resourceVersion: "15357519"
  uid: 7396ebce-178e-4469-88a0-6cc9f7941589
spec:
  ingressClassName: kong
  rules:
  - host: echo.gcp.wesafer.com.br
    http:
      paths:
      - backend:
          service:
            name: echo
            port:
              number: 1027
        path: /echo
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - echo.gcp.wesafer.com.br
    secretName: ingress-cert
status:
  loadBalancer:
    ingress:
    - ip: 34.132.163.192
